fix: fix subnet delete flow

--- a/transit-backend/app/.env
+++ b/transit-backend/app/.env
@@ -1,6 +1,6 @@
 # Database 
 
-DATABASE_URL=mysql+pymysql://cloud:1@controller/cloud
+DATABASE_URL=mysql+pymysql://cloud:1@localhost/cloud
 
 # Region auth 
 
