--- a/transit-backend/alembic.ini
+++ b/transit-backend/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+pymysql://cloud:1@controller/cloud
+sqlalchemy.url = mysql+pymysql://cloud:1@localhost/cloud
 
 
 [post_write_hooks]
