add: tgw peering route table

--- a/transit-backend/app/.env
+++ b/transit-backend/app/.env
@@ -12,3 +12,8 @@ USER_DOMAIN_NAME=Default
 
 # Allowed-origins 
 ALLOWED_ORIGIN=*
+
+# Transit service url region 1 
+REGIONS=Ha-Noi,Ho-Chi-Minh
+TRANSIT_SERVICE_URL_1=http://network-a:493000
+TRANSIT_SERVICE_URL_2=http://network-b:493001
