--- a/transit-backend/.pylintrc
+++ b/transit-backend/.pylintrc
@@ -3,5 +3,5 @@
 
 [MESSAGES CONTROL]
 # Disable the checks for missing docstrings
-disable=C0114, C0115, C0116, R0903, E1101, W0718, W0719
+disable=C0114, C0115, C0116, R0903, E1101, W0718, W1203, W0719, E1121, C0103, W0611, C0301, W0612, W0221
 
